# rag-trump-twitter

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  build_index.py  build_term_expansion_index.py  config.py  main.py  pyproject.toml
ingest/: clean_tweets.py  load_tweets.py  run_cleaning.py
rag/: dedupe.py  embeddings.py  generator.py  prompts.py  query_utils.py  retriever.py
